# pywebsearch

./: .gitignore  MANIFEST.in  PKGBUILD  README.md  alias.py  app_settings.py  backup.py  common.py  config.py  dialogs.py  importbrowsers.py  linux.py  main.py  platform_base.py  pyproject.toml  pywebsearch.iss  pywebsearch.spec  requeriments.txt  requirements.txt  search.py  setup.py  windows.py
.github/: RELEASE.md
.github/workflows/: build-flatpak.yml  publish-pypi.yml  release.yml  tests.yml
flatpak/: com.github.dmnmsc.pywebsearch.appdata.xml  com.github.dmnmsc.pywebsearch.desktop  com.github.dmnmsc.pywebsearch.yml
pywebsearch/: app_settings.py  backup.py  config.py  dialogs.py  history.py  linux.py  main.py  platform_base.py  search.py  windows.py
resources/: pywebsearch.desktop
test-tools/: emoji.py  genlinuxicons.py  genwindowsico.py
test-tools/svgwrite/: emojimenu.py
