[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebsearch"
version = "3.6.6"
description = "Customizable web search tool with aliases, !bangs and GUI"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "dmnmsc", email = "dmnmsc@users.noreply.github.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["search", "web", "browser", "aliases", "bangs"]
dependencies = [
    "pybrowsers",
    "PyQt6",
    "platformdirs"
]

[project.optional-dependencies]
windows = ["installed-browsers"]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/dmnmsc/pywebsearch"
Repository = "https://github.com/dmnmsc/pywebsearch.git"
Issues = "https://github.com/dmnmsc/pywebsearch/issues"

[project.scripts]
pywebsearch = "pywebsearch.main:main"

[tool.setuptools]
packages = ["pywebsearch"]

[tool.setuptools.package-data]
pywebsearch = ["icons/*.*"]
